# ToyRasterizer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  geometry.hpp  main.cpp  model.cpp  model.hpp  shader.hpp  tgaimage.cpp  tgaimage.hpp  triangle.hpp
